kubernetes/cluster-networking/backend.yaml
apiVersion: v1
kind: Pod
metadata:
    name: backend
    labels:
        name: backend
spec:
    containers:
        - name: python-backend
          image: python:3.9-slim
          command: ["python", "-m", "http.server", "8000"]
          resources:
              limits:
                  memory: "128Mi"
                  cpu: "500m"
          ports:
              - containerPort: 8000
