kubernetes/cluster-networking/database.yaml
apiVersion: v1
kind: Pod
metadata:
    name: database
    labels:
        name: database
spec:
    containers:
        - name: mysql-database
          image: mysql:5.7
          ports:
              - containerPort: 3306
          resources:
              limits:
                  cpu: "500m"
                  memory: "512Mi"
              requests:
                  cpu: "250m"
                  memory: "256Mi"
---
apiVersion: v1
kind: Service
metadata:
    name: database-service
spec:
    selector:
        app: database
    ports:
        - port: 3306
          targetPort: 3306
